  - Fix various additional memory leaks.
  - Reenable closing of module handles which sneaked in during debugging.
2007-06-26 - 1.0.14
  Bugfix point release.  Bug(s) fixed:
  - Fix another bug in channel modes causing a desync. (#28)
  - Only show topic, entry message, and mlock to opers or members. (#38 maybe #31)
  - set #channel floodserv should show on/off properly. (#29)
  - floodserv shouldn't insert an AKILL twice. (#37)
  - Remove stray tab from chanserv access add help.
  - the part cb may send a null channel don't let FS crash. (#43)
  - opers should be allowed to see operserv help. (#41)
  - db_find_chan and db_find_chanaccess shouldn't leak when the channel isn't
    found or access level. (#26)
  - Fix another bug in channel modes causing a desync. (#28)
	- Don't allow operserv to be reloaded, it just wont work. (#45)
2007-06-28 - 1.0.15
	Bugfix point release. Bug(s) fixed:
	- We should BlockHeapFree clients when they've exited. (#26)
	- STATS z implementation. (#17)
2007-06-28 - 1.0.16
	Bugfix point release. Bug(s) fixed:
	- Now that we properly free clients we should delete their IDs (Fixes
		crash).
2007-??-?? - 1.1.0
	Feature/Bugfix release.
	- Fix inconsistency in SQL statements used to deal with channel masters on
		access lists. (#1)
	- Rework GET_AKICKS query to not join on channel and just use the id
		directly, since that's what we use most and the name we have elsewhere
		anyway. (#5)
	- Allow NULL hostname to be specified for database{} connection to use the
		system default to the database driver. (#21)
	- Set Precedence: junk on outgoing mail. (#2)
	- Add floodserv flag to chanserv's info. (#30)
	- Removed stray tab in HELP_SET_PRIVATE_LONG. (#27)
	- Add status command to nickserv. (#3)
	- Fix nickserv status.
	- make MLOCK accept -l and -k, turn off AUTOLIMIT if -l set. (#32)
	- Enforced nicknames shouldn't be opers or admins, also set realname to
		sensible things if so desired. (#34)
	- STATS spy notice. (#17)