@@ -66,6 +66,8 @@ AX_ARG_WITH_DNODE_HEAP_SIZE
 AX_ARG_WITH_BAN_HEAP_SIZE
 AX_ARG_WITH_TOPIC_HEAP_SIZE
 AX_ARG_WITH_SERVICES_HEAP_SIZE
+AX_ARG_WITH_MQUEUE_HEAP_SIZE
+AX_ARG_WITH_FMSG_HEAP_SIZE
 AX_ARG_ENABLE_HALFOPS
 AX_ARG_ENABLE_DEBUGGING
 AX_ARG_ENABLE_WARNINGS
